monitoring/service-postgres-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-postgres-exporter
  namespace: monitoring
  labels:
    app: prometheus-postgres-exporter
spec:
  selector:
    app: prometheus-postgres-exporter
  ports:
    - name: http
      port: 9187
      targetPort: 9187
