monitoring/ingress-grafana-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.anpt1992.dev
      secretName: cloudflare-origin-cert
  rules:
    - host: grafana.anpt1992.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.anpt1992.dev
      secretName: cloudflare-origin-cert
  rules:
    - host: prometheus.anpt1992.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
