monitoring/allow-all-internal.yaml
yeapiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-internal
  namespace: monitoring
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector: {}
  egress:
  - to:
    - podSelector: {}
    - namespaceSelector: {}
  policyTypes:
  - Ingress
  - Egress
